--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "Text-RecordParser-v1.5.0.tar.gz": d829d7ab5ef43df0d6af01ee8adad5742682f832
+  Text-RecordParser-v1.6.3.tar.gz: b9eb13f3d0c30fa3deba258f465363fa51df5f9c
